# sw_algorithms_lib

./: CMakeLists.txt  README.md  log_channels_107.ods  log_channels_120.ods
ARM_math/: arm_mat_inverse_f32.c  arm_mat_inverse_f64.c  arm_mat_mult_f32.c  arm_mat_mult_f64.c  arm_mat_trans_f32.c  arm_mat_trans_f64.c  matrix_functions.h  matrix_utils.h
Filter_Design/: 2D_flight_simulator.m  Kalman_VA.m  Kalman_VA_acc_offset.m  Kalman_VA_tuner.m  Kalman_XVA_acc_offset.m  flight_simulator_2D.m  induction_sensor_matrix_plus_soft_iron_compensation.m  kalman_vario_XVA.m  magnetic_calibration_SVD.m  magnetic_compensation_SVD_work.m  vario_speed_comp_tuning.m  vario_speed_comp_tuning_kalmanVA.m  vario_speed_comp_tuning_test_lift.m  vario_speed_comp_tuning_test_lift_kalmanVA.m
Generic_Algorithms/: CRC.h  CRC16.h  CRCtable.cpp  HP_LP_fusion.h  Linear_Least_Square_Fit.h  RMS_rectifier.h  accumulating_averager.h  ascii_support.cpp  ascii_support.h  asin_atan.h  boxcar_averager.h  delay_line.h  differentiator.h  euler.h  float3matrix.h  float3vector.h  integrator.h  matrix.h  mean_and_variance_finder.h  my_asin.cpp  my_asin.h  my_atan2.cpp  pt2.h  quaternion.h  reminder_flag.h  ringbuffer.h  scoped_lock.h  serial_io.cpp  serial_io.h  slope_limiter.h  trigger.h  vector.h
NAV_Algorithms/: AHRS.cpp  AHRS.h  GNSS.h  KalmanVario.cpp  KalmanVario.h  KalmanVario_PVA.cpp  KalmanVario_PVA.h  Kalman_V_A_Aoff_observer.cpp  Kalman_V_A_Aoff_observer.h  Kalman_V_A_observer.cpp  Kalman_V_A_observer.h  NAV_tuning_parameters.h  air_density_observer.cpp  air_density_observer.h  airborne_detector.h  atmosphere.cpp  atmosphere.h  communicator_command.h  compass_calibration.h  compass_calibrator_3D.cpp  compass_calibrator_3D.h  compass_ground_calibration.h  data_structures.h  earth_induction_model.cpp  earth_induction_model.h  flight_observer.cpp  flight_observer.h  gyro_gain_adjust.h  induction_observer.h  magnetic_induction_report.h  navigator.cpp  navigator.h  old_data_structures.h  organizer.cpp  organizer.h  persistent_data.cpp  persistent_data.h  persistent_data_file.cpp  persistent_data_file.h  sensor_orientation_setup.cpp  (+10 more)
Output_Formatter/: CAN_gateway.h  CAN_output.cpp  CAN_output.h  NMEA_format.cpp  NMEA_format.h  SHA256.cpp  SHA256.h  ascii_support.cpp  ascii_support.h  generic_CAN_driver.h  parameter_setting.h  signal_flight_event.h  system_state.h
Persistent_Data/: CRC16.h  CRC16_table.cpp  abstract_EEPROM_storage.h  flexible_file_format.h  flexible_log_file.cpp  flexible_log_file.h  persistent_data.cpp  persistent_data.h  persistent_data_file.h
World_Magnetic_Model_design/: earth_mag_model_poly_world.m
