project(sw_sensor_algorithms)

set(SOURCE_FILES
    Generic_Algorithms/serial_io.cpp
    NAV_Algorithms/AHRS.cpp
    NAV_Algorithms/air_density_observer.cpp
    NAV_Algorithms/atmosphere.cpp
    NAV_Algorithms/earth_induction_model.cpp
    NAV_Algorithms/KalmanVario.cpp
    NAV_Algorithms/KalmanVario_PVA.cpp
    NAV_Algorithms/Kalman_V_A_Aoff_observer.cpp
    NAV_Algorithms/navigator.cpp
    NAV_Algorithms/persistent_data.cpp
    NAV_Algorithms/setup_tester.cpp
    NAV_Algorithms/soft_iron_compensator.cpp
    NAV_Algorithms/variometer.cpp
    Output_Formatter/ascii_support.cpp
    Output_Formatter/CAN_output.cpp
    Output_Formatter/NMEA_format.cpp
    ARM_math/arm_mat_inverse_f32.c
    ARM_math/arm_mat_inverse_f64.c
    ARM_math/arm_mat_mult_f32.c
    ARM_math/arm_mat_mult_f64.c
    ARM_math/arm_mat_trans_f32.c
    ARM_math/arm_mat_trans_f64.c
    )

set(HEADER_FILES
    Generic_Algorithms/accumulating_averager.h
    Generic_Algorithms/boxcar_averager.h
    Generic_Algorithms/delay_line.h
    Generic_Algorithms/differentiator.h
    Generic_Algorithms/euler.h
    Generic_Algorithms/float3matrix.h
    Generic_Algorithms/float3vector.h
    Generic_Algorithms/HP_LP_fusion.h
    Generic_Algorithms/integrator.h
    Generic_Algorithms/Linear_Least_Square_Fit.h
    Generic_Algorithms/matrix.h
    Generic_Algorithms/mean_and_variance_finder.h
    Generic_Algorithms/pt2.h
    Generic_Algorithms/quaternion.h
    Generic_Algorithms/ringbuffer.h
    Generic_Algorithms/serial_io.h
    Generic_Algorithms/slope_limiter.h
    Generic_Algorithms/trigger.h
    Generic_Algorithms/vector.h
    NAV_Algorithms/AHRS.h
    NAV_Algorithms/air_density_observer.h
    NAV_Algorithms/airborne_detector.h
    NAV_Algorithms/atmosphere.h
    NAV_Algorithms/compass_calibration.h
    NAV_Algorithms/data_structures.h
    NAV_Algorithms/earth_induction_model.h
    NAV_Algorithms/variometer.h
    NAV_Algorithms/GNSS.h
    NAV_Algorithms/KalmanVario.h
    NAV_Algorithms/KalmanVario_PVA.h
    NAV_Algorithms/Kalman_V_A_Aoff_observer.h
    NAV_Algorithms/navigator.h
    NAV_Algorithms/NAV_tuning_parameters.h
    NAV_Algorithms/organizer.h
    NAV_Algorithms/persistent_data.h
    NAV_Algorithms/soaring_flight_averager.h
    NAV_Algorithms/soft_iron_compensator.h
    NAV_Algorithms/wind_observer.h
    Output_Formatter/ascii_support.h
    Output_Formatter/CAN_gateway.h
    Output_Formatter/CAN_output.h
    Output_Formatter/generic_CAN_driver.h
    Output_Formatter/NMEA_format.h
    Output_Formatter/system_state.h
    ARM_math/matrix_functions.h
    ARM_math/arm_math_memory.h
    ARM_math/arm_math_types.h
    ARM_math/matrix_utils.h
    ARM_math/cmsis_compiler.h
    ARM_math/cmsis_gcc.h
    ARM_math/matrix_utils.h
    ARM_math/none.h
    ARM_math/utils.h
)

add_library(larus_lib
  ${SOURCE_FILES}
  ${HEADER_FILES}
)

target_include_directories(larus_lib
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/Generic_Algorithms
        ${CMAKE_CURRENT_SOURCE_DIR}/NAV_Algorithms
        ${CMAKE_CURRENT_SOURCE_DIR}/Output_Formatter
        ${CMAKE_CURRENT_SOURCE_DIR}/ARM_math
        ../src
)